yo/app/styles/main.css
  .browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}



html,body, .cotainer-fluid,.row  { 
  font-family:'Gill Sans','Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, AppleGothic, sans-serif; 
  width:100%;
  height:100%;
  background-color: #EEEEEE;



}


.pop-up, .tooltip{
  
  z-index: 999999999;

}

.button-holder .btn{
  border:0px solid transparent;
  width:100%;
}

/*Angular-Loading-Bar*/
#loading-bar,
#loading-bar-spinner {
  pointer-events: none;
  -webkit-pointer-events: none;
  -webkit-transition: 350ms linear all;
  -moz-transition: 350ms linear all;
  -o-transition: 350ms linear all;
  transition: 350ms linear all;
}

#loading-bar.ng-enter,
#loading-bar.ng-leave.ng-leave-active,
#loading-bar-spinner.ng-enter,
#loading-bar-spinner.ng-leave.ng-leave-active {
  opacity: 0;
}

#loading-bar.ng-enter.ng-enter-active,
#loading-bar.ng-leave,
#loading-bar-spinner.ng-enter.ng-enter-active,
#loading-bar-spinner.ng-leave {
  opacity: 1;
}

#loading-bar .bar {
  -webkit-transition: width 350ms;
  -moz-transition: width 350ms;
  -o-transition: width 350ms;
  transition: width 350ms;

  background: #fff;
  position: fixed;
  z-index: 10002;
  top: 0;
  left: 0;
  width: 100%;
  height: 2px;
  border-bottom-right-radius: 1px;
  border-top-right-radius: 1px;
}



/* Make the masthead heading the same height as the navigation */

/*Header */
#header {
   
   width:100%;
   color:#ECECEC;
   background-color:#22A7F0;
}


#header a {
  color:#ECECEC;
  float:right;
}
/* Side bar*/

#sidebar{
 
  padding-left: 0;
  padding-right: 0;  
}


.sidebar-wrapper a{  
  display: block;  
  color:#ECECEC; 
  font-size: 19px; 
  padding:15px;
 

}

.sidebar-wrapper a:hover{
    color:#2b2b2b;
 
    
}


/* Main Container */

.container-fluid {
  
  padding-left: 0px;
  padding-right: 0px;  
  background-color: #32323a;


}

.row {
  margin-left: 0px;
  margin-right: 0px;
}


#main-box{
  
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 90px;
  background-color: #eee;  
}

.box{
  background-color: #fff;  
  margin-top: 25px; 
  
  padding: 10px 10px 10px 10px;   
  border: 1px solid #d4d4d4;
  min-height: 377px;

}

.search-box {
  min-height: 0px;
}

.internal-row {
  background-color: #fff !important;  
}


/* icon classes/ graph buttons */



.sub-menu {
  float:right;
  position: static;
  background-color: #808080;
  margin-left: 6px;
  max-width: 120px;
}



.region-options{
  max-width: 100px;
}


.calendar , .user, .lock {
    float: right;
    margin-right: 8px;
    margin-top: -43px;
    position: relative;
    z-index: 2;
   
}

/*Specific pages CSS */



/* Login page CSS */



#login-box {
  background-color: #fff;  
  border: 1px solid #d4d4d4;
  margin-top: 8%;
  padding-top: 40px;
}

#login-message {
  font-size: 300%;

}

.login-menu{
  margin-bottom:20px;

}


/* Download CSS */
.search-bar{
  margin-bottom: 10px;
}
.chart-container{
  max-width: 98%;
}


.chart{
  position:static !important;

}

.chart-container-map {
  margin-left: 50px;
}

.text-format{
  text-align: center;
}

.text-format h2{
    padding-top: 20px;
}


/*
  Download Modal CSS
*/
.modal-button {
  float:right;
}


/*
User css
*/

.user-icon{
  padding-left: 13px;
  color: #66FF00;
}

.table-borderless tbody tr td, .table-borderless tbody tr th, .table-borderless thead tr th {
    border: none;
}

/**
Ui-grid Css
**/
.ui-grid-header-cell {
  background-color: white;

}

